--- a/report/markdown/manuscript_supplement.Rmd
+++ b/report/markdown/manuscript_supplement.Rmd
@@ -235,7 +235,7 @@ $n_i$ denotes the number of metabolic reactions within the $i$-th metabolic subs
 $n_{regulated}$ is the total number of significantly activated or inhibited biochemical reactions. 
 Common significantly activated or inhibited metabolic subsystems were identified as metabolic subsystems significantly activated or inhibited in at least four cohorts, with at least weak effect size defined by OR $\geq$ 1.44 (__Supplementary Figure S\@ref(fig:fig-metabolism)__, __Supplementary Table S\@ref(tab:tab-subsystems)__). 
 
-## Multi-parameter survival modeling and transcriptional collagen score
+## Multi-parameter survival modeling with transcriptome data
 
 For survival analyses, $log_2$-transformed expression values of the collagen-related genes (__Supplementary Table S2__) were subjected to batch-adjustment with the ComBat algorithm [@Leek2012]. 
 Subsequently, the ComBat-adjusted expression data sets of the GSE54460, GSE70768, GSE70769, GSE220095 cohorts were merged (further referred to as 'pooled GEO' cohort). 
@@ -247,7 +247,7 @@ The GBM model was trained in the pooled GEO cohort with the optimal tuning param
 The Transcriptomic Collagen Score was defined as the linear predictor score of the GBM model and was computed for the best model iteration (function `gbm.perf(method = 'cv')`) with the `predict()` method and expression data from the training pooled GEO cohort and the TCGA and DKFZ test collectives. 
 Importance of the explanatory variables for the predictive performance of the GBM model in the training pooled GEO cohort were measured with the relative influence method [@Friedman2001] and expressed as gradient of the sum of squared errors attributed to particular variables ($\Delta SSE$, __Figure 3A__). 
 
-Performance of the Transcriptional Collagen Score at prediction of biochemical relapse-free survival was assessed by uni-variable Cox regression (functions `coxph()` and `as_coxex()`, packages _survival_ and [_coxExtensions_](https://github.com/PiotrTymoszuk/coxExtensions)) [@Therneau2000]. 
+Performance of the Transcriptomic Collagen Score at prediction of biochemical relapse-free survival was assessed by uni-variable Cox regression (functions `coxph()` and `as_coxex()`, packages _survival_ and [_coxExtensions_](https://github.com/PiotrTymoszuk/coxExtensions)) [@Therneau2000]. 
 The proportional hazard assumption of the Cox models was checked with the `summary(type = 'assumptions')` method, which implements the genuine `cox.zph()` algorithm [@Grambsch1994]. 
 Harrell's concordance index [@Harrell1996] and integrated Brier score [@Graf1999] were employed to investigate the overall concordance between the predicted and observed survival and to assess overall calibration (method `summary(type = 'fit')`, package [_coxExtensions_](https://github.com/PiotrTymoszuk/coxExtensions), __Figure 3B__ and __Supplementary Table S\@ref(tab:tab-model-survival)__). 
 Of note, as compared with several other machine learning algorithms (Ridge, Elastic Net, and LASSO Cox regression, SVM and Random Forest) [@Friedman2010; @Fouodo2018; @Ishwaran2008; @Ishwaran2022a], the GBM model demonstrated an excellent performance and the highest reproducibility at prediction of biochemical relapse-free survival in the investigated cohorts (__Supplementary Figure S\@ref(fig:fig-surv-algos)__, __Supplementary Table S\@ref(tab:tab-model-survival)__). 
@@ -528,13 +528,13 @@ __Supplementary Figure S\@ref(fig:fig-clust-dev). Semi-supervised clustering of 
 
 _Cancer samples in the TCGA training cohort (n = `r nrow(clust_globals$data$tcga)`) were clustered in respect to normalized, $log_2$-transformed expression levels of the collagen-related genes of interest with the PAM (partition around medoids) algorithm with cosine distance metric. Two clusters were defined: collagen low and collagen high. Assignment of the tumor samples in the training GSE54460 (n = `r nrow(clust_globals$data$gse54460)`), GSE70768 (n = `r nrow(clust_globals$data$gse70768)`), GSE70769 (n = `r nrow(clust_globals$data$gse70769)`), GSE220095 (n = `r nrow(clust_globals$data$gse220095)`), and DKFZ collective (n = `r nrow(clust_globals$data$dkfz)`) to the collagen clusters was accomplished by an inverse distance-weighted k-nearest neighbor classifier._
 
-_(A) Comparison of performance of several clustering algorithms (PAM: partition around medoids, HCL: hierarchical clustering/Ward D2 and KMEANS) and distance metrics (Euclidean, Manhattan, squared Euclidean and cosine) in 5-fold cross-validation of the TCGA data set gauged by mean silhouette width as a measure of cluster separation, fraction of observations with negative silhouette widths indicative of possible misclassification, explained clustering variance and fraction of misclassified 5-nearest neighbors, cluster assignment accuracy in the cross-validation folds. Note superior performance of the PAM/cosine algorithm used for definition of the collagen clusters._
+_(A) Comparison of performance of several clustering algorithms (PAM: partition around medoids, HCL: hierarchical clustering/Ward D2 and KMEANS) and distance metrics (Euclidean, Manhattan, squared Euclidean and cosine) in 5-fold cross-validation of the TCGA data set gauged by mean silhouette width as a measure of cluster separation, fraction of observations with negative silhouette widths indicative of possible misclassification, explained clustering variance and fraction of misclassified 5-nearest neighbors, cluster assignment accuracy in the cross-validation folds. Note the superior performance of the PAM/cosine algorithm used for definition of the collagen clusters._
 
 _(B) Choice of cluster number (k = 2) for PAM/cosine clustering of cancer samples in the TCGA cohort motivated by the peak mean silhouette width statistic._
 
 _(C) Distribution of sizes of the collagen clusters in the TCGA training cohort and the validation collectives. Percentages of samples assigned to the collagen clusters are presented in a stack plot._
 
-_(D) Quality of collagen clusters in the training cohort (TCGA) and validation collectives. Cluster separation was assessed by mean silhouette width, misclassification rate is expressed as fraction of observations with negative silhouette widths. Explanatory performance was gauged by fraction of explained clustering variance. Neighborhood preservation was assessed by mean fraction of 5-nearest neighbors placed in different clusters._
+_(D) Quality of collagen clusters in the training cohort (TCGA) and validation collectives. Cluster separation was assessed by mean silhouette width, misclassification rate is expressed as fraction of observations with negative silhouette widths. Explanatory performance was gauged by fraction of explained clustering variance. Neighborhood preservation was assessed by mean fraction of 5-nearest neighbors placed in the same cluster._
 
 \newpage
 
@@ -588,7 +588,7 @@ __Supplementary Figure S\@ref(fig:fig-biology). Gene set variation analysis of R
 
 _(A) Gene set variation analysis (GSVA) with Reactome pathway gene signatures. Statistical significance for differences in signature single sample gene set enrichment analysis scores (ssGSEA) between the collagen clusters was determined by two-tailed T test with Cohen's d effect size statistic. P values were corrected for multiple testing with the false discovery rate method. Mean ssGSEA scores in the clusters and cohorts for signatures significantly regulated in at least five cohorts with at least weak effect size (d $\geq$ 0.2) are presented in a heat map. Full analysis results are presented in Supplementary Table S\@ref(tab:tab-gsva). The common regulated gene signatures were classified in respect their co-expression patterns by KMEANS clustering; signature classification is indicated in the Y axis facets of the heat map (ECM: extracellular matrix, GF: growth factor, GPCR: G protein-coupled receptor)._
 
-_(B) Genes differentially expressed between the collagen clusters were identified by false discovery rate (FDR) corrected two-tailed T test with Cohen's d effect size statistic. Differentially expressed genes were defined by the pFDR < 0.05 and d $\geq$ 0.2 cutoffs (Supplementary Table \@ref(tab:tab-dge)). Biological process gene ontology (GO) enrichment within genes significantly unregulated in the collagen high and the collagen low clusters was investigated with the goana algorithm. Enrichment p values were adjusted for multiple testing with the FDR method, odds ratio of enrichment over the whole-transcriptome GO frequency served as an effect size statistic. GO terms significantly enriched with at least weak effect size (OR $\geq$ 1.44) in at least five cohorts were subjected to multi-dimensional scaling and unsupervised KMEANS clustering in respect to their semantic similarity. Multi-dimensional scaling layouts of Wang distances between the common enriched GO terms are presented. Each point represents a single GO term, GO cluster assignment is color coded. Complete results of the GO enrichment analysis are listed in Supplementary Table S\@ref(tab:tab-go-enrichment)._
+_(B) Genes differentially expressed between the collagen clusters were identified by false discovery rate (FDR) corrected two-tailed T test with Cohen's d effect size statistic. Differentially expressed genes were defined by the pFDR < 0.05 and d $\geq$ 0.2 cutoffs (Supplementary Table \@ref(tab:tab-dge)). Biological process gene ontology (GO) term enrichment within genes significantly unregulated in the collagen high and the collagen low clusters was investigated with the goana algorithm. Enrichment p values were adjusted for multiple testing with the FDR method, odds ratio of enrichment over the whole-transcriptome GO frequency served as an effect size statistic. GO terms significantly enriched with at least weak effect size (OR $\geq$ 1.44) in at least five cohorts were subjected to multi-dimensional scaling and unsupervised KMEANS clustering in respect to their semantic similarity. Multi-dimensional scaling layouts of Wang distances between the common enriched GO terms are presented. Each point represents a single GO term, GO cluster assignment is color coded. Complete results of the GO enrichment analysis are listed in Supplementary Table S\@ref(tab:tab-go-enrichment)._
 
 \newpage
 
